# TCUB

./: .gitignore  README.md
latex-position/: main.tex  references.bib
latex-position/sections/: 00_abstract.tex  01_introduction.tex  02_background.tex  03_gap.tex  04_threat_model.tex  05_taxonomy.tex  06_defense_gap.tex  07_research_agenda.tex  08_conclusion.tex
notes/: notes.md
papers/: hpc_agentsec_benchmark_development_plan.md  hpc_agentsec_benchmark_paper_draft.md  hpc_agentsec_position_paper.md  taskbound_benchmark_development_plan.md  taskbound_benchmark_paper_draft.md  taskbound_position_paper.md
taskbound-bench/: M1_FINDINGS.md  README.md  pyproject.toml
taskbound-bench/src/taskbound_bench/: __init__.py  attacks.py  benchmark.py  defenses.py  drivers.py  env.py  executor.py  mapping.py  metrics.py  pipeline.py  scenario.py  tools.py
taskbound-bench/src/taskbound_bench/scenarios/: __init__.py  cross_project_read.py  integrity_tampering.py  resource_abuse.py  shared_fs_persistence.py
taskbound-bench/tests/: test_benchmark.py  test_defenses.py  test_drivers.py  test_matrix.py  test_metrics.py  test_taskscope_executor.py
taskbound-core/: README.md  pyproject.toml
taskbound-core/src/taskbound_core/: __init__.py  engine.py  env.py  glob.py  oracle.py  policy.py  types.py
taskbound-core/tests/: test_engine.py  test_glob.py  test_oracle.py
taskbound-harness/: README.md  pyproject.toml
taskbound-harness/src/taskbound_harness/: __init__.py  cluster.py  driver.py  runner.py  scenario.py  types.py
taskbound-harness/src/taskbound_harness/scenarios/: __init__.py  cross_project_read.py  integrity_tampering.py  resource_abuse.py  shared_fs_persistence.py
taskbound-harness/tests/: test_cluster.py  test_driver.py  test_scenarios.py
