[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "taskbound-core"
version = "0.1.0"
description = "Dependency-free task-scoped authority core for the TaskBound HPC agent-security benchmark: TaskPolicy, a pure PolicyEngine, and deterministic security oracles."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "TaskBound" }]
keywords = ["hpc", "agent-security", "prompt-injection", "benchmark", "policy"]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
